STYLE:前年度までのデータはdetailsで折り畳んで表示するようにした

--- a/my-org-export.css
+++ b/my-org-export.css
@@ -354,3 +354,8 @@ pre.code {
     font-family: "Source Code Variable", monospace;
     font-size: 11px;
 }
+
+details > details,
+details > div {
+  padding-left: 16px;
+}
